[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "powerflow_mcp"
version = "0.1.0"
description = "MCP for running powerflow and analysis powerflow result for AI agent"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Project Contributors"}
]
dependencies = [
    "pandapower",
    "numpy",
    "matplotlib",
    "mcp[cli]",
    "httpx",
    "pre-commit>=4.2.0",
    "ruff>=0.11.10",
    "qwen-agent[code-interpreter,gui,mcp,rag]>=0.0.24",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
]

[tool.ruff]
# Enable flake8-bugbear rules
select = ["E", "F", "B"]
# Exclude a variety of commonly ignored directories
exclude = [
    ".git",
    ".ruff_cache",
    "build",
    "dist",
    "env",
    "venv",
]
# Same as Black
line-length = 88
# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Target Python 3.8+
target-version = "py38"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"] # Ignore unused imports in __init__.py files
